@@ -1,3 +1,8 @@
+2001-09-10  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* dirent.c (opendir): Use GetFileAttributes rather than stat
+	to determine if input arg is dir.
+
 2001-08-29  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/stdarg.h (va_list): Typedef as __builtin_va_list if
